=== xdg-utils 1.x.x ====

2010-02-28 Fathi Boudra <fabo@freedesktop.org>
    * xdg-utils-common: fix the comment of exit_failure_file_permission_write
	  function. (BR12821)

2010-02-28 Fathi Boudra <fabo@freedesktop.org>
    * xdg-open: fix regression in open_generic as xdg-mime doesn't handle
	  URLs (mimeopen and run-mailcap as well). Move xdg-mime call into
	  a new function (open_generic_xdg_mime). Check input file before
	  trying to open them with non-browsers.

2010-02-28 Fathi Boudra <fabo@freedesktop.org>
    * xdg-open: fix failure if $BROWSER has arguments. (BR14374)
      Thanks to Johannes Wegener.

2010-02-28 Fathi Boudra <fabo@freedesktop.org>
    * xdg-open: try console mode browsers and update the browser list.
      Thanks to Ville Skyttä and Pablo Castellano. (BR14361)

2010-02-24 Fathi Boudra <fabo@freedesktop.org>
    * xdg-screensaver: use dbus-send instead of qdbus for freedesktop
      screensaver.

2010-02-23 Fathi Boudra <fabo@freedesktop.org>
    * xdg-mime: improve MIME string check when using gnomevfs-info. (BR12818)

2010-02-23 Fathi Boudra <fabo@freedesktop.org>
    * xdg-mime: report error on failure.

2010-02-21 Fathi Boudra <fabo@freedesktop.org>
    * xdg-open: in open_generic, use xdg-mime to lookup mime type and
      association before the alternatives methods (mimeopen and run-mailcap).
      (BR23280)

2010-02-20 Fathi Boudra <fabo@freedesktop.org>
    * Add gvfs-copy and gvfs-info support. (BR15828)

2010-01-27 Rex Dieter <rdieter@fedoraproject.org>
    * xdg-settings: Add %s to the command in the Gnome url handlers (BR26284)

2010-01-18 Rex Dieter <rdieter@fedoraproject.org>
    * xdg-screensaver resume activates the screensaver on KDE4 (BR26085)

2009-10-16 Rex Dieter <rdieter@fedoraproject.org>
    * prefer gvfs-open over gnome-open
    * DE=gnome, if org.gnome.SessionManager exists on dbus

2009-10-12 Fathi Boudra <fabo@freedesktop.org>
    * Fix xdg-email --attach failure with Evolution. (BR23007)